--- a/templates/output.html
+++ b/templates/output.html
@@ -3,7 +3,7 @@
 {% block body %}
 <center>
     <h1 style="color:cyan" ;>  <b>Predicted_Score</b>  : {{Predicted_score}}</h1>
-    <a href="http://127.0.0.1:8000/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Predict Again</a>
+    <a href="https://first-inn-score-predictor.herokuapp.com/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Predict Again</a>
 </center>
 
 {% endblock body %}
